package ar.edu.utn.frba.dds.models.georef;

public class Centroide {

    public double lat;
    public double lon;

    public double getLat() {
        return lat;
    }

    public void setLat(double lat) {
        this.lat = lat;
    }

    public double getLon() {
        return lon;
    }

    public void setLon(double lon) {
        this.lon = lon;
    }

    // Getters y setters
}