package ar.edu.utn.frba.dds.models.georef;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Provincia {

    public int id;
    public String nombre;

    public Centroide centroide;


}
